# IA-Tarea3

./: .gitignore  LICENSE  README.md  agent.py  app.py  manual_metadata.json  pyproject.toml  rag_tool.py  run_app.py  search_tool.py  testing_simple_rag.py  vector_creation_and_test.py
vector_store/: index.pkl
